--- a/src/controller/public/joystick.html
+++ b/src/controller/public/joystick.html
@@ -15,6 +15,11 @@
     <button onclick="robot.connect()">Connect</button>
     <button onclick="robot.disconnect()">Disconnect</button>
     <button onclick="robot.stop()">Stop</button>
+    <button onclick="robot.upload()">Upload</button>
+    <button onclick="robot.getDeviceCode()">getDeviceCode</button>
+    <button onclick="robot.getDeviceFunctions()">getDeviceFunctions</button>
+    <button onclick="robot.reset()">reset</button>
+    <button onclick="robot.getBattery()">getBattery</button>
   </div>
 
   <a href="index.html">Home</a>
