Refactored pages into seperate ts files

--- a/src/public/joystick.html
+++ b/src/public/joystick.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='//yoannmoinet.github.io/nipplejs/stylesheets/styles.css'>
-    <link rel='stylesheet' href='//yoannmoinet.github.io/nipplejs/stylesheets/github-light.css'>
     <title>Joystick Controller</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
-    <script src="src/index.js"></script>
+    <script src="src/joystick.js"></script>
 
     <div id="page-root">
     </div>
