--- a/src/public/self-driving.html
+++ b/src/public/self-driving.html
@@ -7,7 +7,7 @@
     <title>Self-Driving</title>
 </head>
 <body>
-    <script src="src/index.js">
+    <script src="src/self-driving.js">
     </script>
 
     <div id="page-root">
