--- a/src/public/host.html
+++ b/src/public/host.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Self-Driving</title>
+    <title>Host</title>
 </head>
 <body>
-    <script src="src/self-driving.js">
+    <script src="src/host.js">
     </script>
 
     <div id="page-root">
